@@ -281,6 +281,7 @@ packages for the libraries that \app{gretl} uses:
     ZLIB     & \texttt{apt-get install zlib1g-dev} \\
     XML      & \texttt{apt-get install libxml2-dev} \\
     GMP      & \texttt{apt-get install libgmp3-dev} \\
+    CURL     & \texttt{apt-get install libcurl-dev} \\
     MPFR     & \texttt{apt-get install libmpfr-dev}
   \end{tabular}
 \end{center}
@@ -583,6 +584,8 @@ Below is a listing of the full URLs of websites mentioned in the text.
 \item[Gnome desktop homepage] \url{http://www.gnome.org/}
 \item[GNU Multiple Precision (GMP) library]
   \url{http://gmplib.org/}
+\item[CURL library]
+  \url{http://curl.haxx.se/libcurl/}
 \item[GNU Octave homepage] \url{http://www.octave.org/}
 \item[GNU R homepage] \url{http://www.r-project.org/}
 \item[GNU R manual]
@@ -595,7 +598,6 @@ Below is a listing of the full URLs of websites mentioned in the text.
 \item[GTK+ homepage] \url{http://www.gtk.org/}
 \item[GTK+ port for win32]
   \url{http://www.gimp.org/~tml/gimp/win32/}
-\item[Gtkextra homepage] \url{http://gtkextra.sourceforge.net/}
 \item[InfoZip homepage]
   \url{http://www.info-zip.org/pub/infozip/zlib/}
 \item[JMulTi homepage] \url{http://www.jmulti.de/}
