@@ -272,10 +272,11 @@ In addition, the following operators (``dot'' operators) apply on an
 element-by-element basis:
 
 \begin{center}
-\begin{tabular}{cccccccc}
+\begin{tabular}{cccccccccc}
 \texttt{.+}  &  \texttt{.-}  &
 \texttt{.*}  &  \texttt{./}  &  \verb+.^+  &
-\texttt{.=}  &  \texttt{.>}  &  \texttt{.<} 
+\texttt{.=}  &  \texttt{.>}  &  \texttt{.<} &
+\texttt{.>=}  &  \texttt{.<=} 
 \end{tabular}
 \end{center}
 
