@@ -5077,6 +5077,10 @@ static double x_op_y (double x, double y, int op)
 	return x > y;
     case '<':
 	return x < y;
+    case ']':
+	return x >= y;
+    case '[':
+	return x <= y;
     default:
 	return 0;
     }
